<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#011613"
    android:backgroundTint="#011412"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="366dp"
        android:layout_height="451dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/image_of_a_splashscreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/spalshscreen"
        tools:ignore="ExtraText,MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/kdam_thmor_pro"
        android:gravity="center"
        android:lineSpacingExtra="8dp"
        android:text="@string/spend_smarter_nsave_more"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
        android:textColor="#008080"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <Button
        android:id="@+id/getstartedButton"
        android:layout_width="212dp"
        android:layout_height="63dp"
        android:layout_gravity="center"
        android:layout_marginTop="160dp"
        android:backgroundTint="@color/customTeal"
        android:elevation="4dp"
        android:fontFamily="@font/kdam_thmor_pro"
        android:gravity="center"
        android:onClick="Start"
        android:padding="12dp"
        android:text="@string/get_started"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="MissingConstraints"
        tools:text="@string/get_started" />

</androidx.constraintlayout.widget.ConstraintLayout>